...
  const {
    advanceButtonRight,
    confirmButtonWidth,
  } = useOnRegisterUserSuccessAnimation(isConfirmed);

  return (
    <Scroll testID='CreateAccountScreenScroll' ref={scrollViewRef}>
      <RegisterFormAnimatedBackground>
        <Content>
          <Header
            style={{marginTop: 15, paddingHorizontal: 20}}
            type="secondary"
            title={translation('CREATE_ACCOUNT')}
          />

          <FormWrapper>
            <RegisterForm ref={formRef} onSubmitSuccess={handleSubmit} />
            <Animated.View style={{width: confirmButtonWidth, marginTop: 10}}>
              <RoundedButton
                testID='RegisterSendButton'
                inverted
                disabled={isConfirmed}
                text={isConfirmed ? '' : translation('SEND')}
                icon={isConfirmed ? 'check' : ''}
                onPress={() => formRef.current?.submitForm()}
              />
...
