import React, {useRef, forwardRef, useState} from 'react';
import {useNavigation} from '@react-navigation/native';
import {Form} from '@unform/mobile';

import {
  EmailInput,
  NewPasswordInput,
  ConfirmNewPasswordInput,
  CheckInputWithButtonText,
} from '@shared/components';
import {useValidateField, useFormHandles} from '@shared/hooks';
import {validateAll} from '@shared/utils/validations';
...
        validateField={validateField}
        onSubmitEditing={focusInput('confirmNewPassword')}
      />
      <ConfirmNewPasswordInput validateField={validateField} />

      <CheckInputWithButtonText
        testID='IHaveReadPrivacyPolicyCheckInput'
        value={privacyPolicyIsChecked}
        onChange={value => setPrivacyPolicyIsChecked(value)}
        text={translation('I_READ_AND_I_AGREE_WITH_THE')}
        textInEvidence={translation('PRIVACY_POLICY')}
        onTextInEvidencePress={() => navigation.navigate('PrivacyPolicy')}
      />
...
