import {AppThemeName} from '../models';

export const TEST_IDS = {
  CREATE_NEW_USER_BUTTON: 'CreateNewUserButton',
  CHOOSE_NAME_ADVANCE_BUTTON: 'ChooseNameAdvanceButton',
  CONFIRM_NEW_PASSWORD_INPUT: 'confirmNewPasswordInput',
  EMAIL_INPUT: 'EMAIL_INPUT',
  CHOOSE_THEME_ADVANCE_BUTTON: 'ChooseThemeAdvanceButton',
  SAVE_USER_CONFIGURATIONS_BUTTON: 'SaveUserConfigurationSaveButton',
  HEADER_USER_NAME_TEXT: 'HeaderUserNameText',
  WELCOME_SCREEN_WRAPPER: 'WelcomeScreenWrapper',
  NEW_PASSWORD_INPUT: 'NewPasswordInput',
  TEXT_BASE: 'text-base',
  THEME_BOX: (key: AppThemeName) => `ThemeBox-${key}`,
  FONT_AWESOME_ICON_5: 'FontAwesomeIcon5',
  NAVIGATE_BUTTON_TITLE: 'NavigateButton-title',
  TEXT_BUTTON_ICON: 'TextButtonIcon',
...
